Fix checkbox whitespace when inside of a dropdown (#248)

--- a/styles/pup/base/_forms.scss
+++ b/styles/pup/base/_forms.scss
@@ -95,6 +95,7 @@ textarea {
 .radio {
   @include clearfix;
   display: block;
+  white-space: normal;
 }
 
 .checkbox--inline {
